# psychopy

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .lgtm.yml  .mailmap  .svnauthors  .travis.yml  .travisTrusty.yml  .travis_coveragerc  AUTHORS.md  CHANGELOG.txt  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  LICENSES.txt  MANIFEST.in  ProjectProposal.md  README  README.md  README.txt  TODO.txt  TODO_wx_api.org  buildCompleteInstaller.nsi  buildDocs.bat  buildDocs.config  buildDocs.sh  buildExe.bat  buildExeInstaller.nsi  buildRelease.py  buildWinDistributions.bat  buildWinDistributions.ps1  buildingOnAMac.rtf  buildingOnAMac.txt  changelogUpdate.py  changelogUpdateMD.py  code-of-conduct.md  codecov.yml  createInitFile.py  find_pp.sh  (+36 more)
.github/: release.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: CodeQL.yaml  build.yaml  buildAppMacOS.sh  checksum.py  codeql-config.yml  codeql.yml  flake.yaml  gdrive.py  merge_conflicts.yaml  prep_dummy_sound.sh  push_sub_projects.yaml  pytests.yaml  translation.yml
GUI/: ExperimentObjects.py  PsychoPyBuilder.py
GUI/html/: ExperimentObjects-module.html  ExperimentObjects.LoopInitiator-class.html  api-objects.txt  redirect.html
GUI/res/: Thumbs.db
PsychoPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PsychoPyBuilder/: ExperimentObjects.py  ExperimentObjectsTest.py  GUImockup.ppt  PsychoPyBuilder.py  PsychoPyBuilder.py.bak  PsychoPyBuilder.py.mine.bak  keybindings.py
PsychoPyBuilder/html/: ExperimentObjects-pysrc.html  ExperimentObjects.EventBase-class.html  ExperimentObjects.Flow-class.html  ExperimentObjects.LoopHandler-class.html  ExperimentObjects.LoopTerminator-class.html  identifier-index.html  module-tree.html  toc-everything.html
PsychoPyIDE/: PsychoPyIDE.py  keybindings.py  setupApp.py
PsychoPy_BuilderDemos/: README.txt
PsychoPy_BuilderDemos/BART/: README.txt  bart.psyexp  bart.py
PsychoPy_BuilderDemos/branchedExp/: README.txt
PsychoPy_BuilderDemos/navon/: NavonTask.psyexp  NavonTask.py  README.txt  trialTypes.xlsx
PsychoPy_BuilderDemos/psychophysicsStaircase/: README.txt
PsychoPy_BuilderDemos/sternberg/: README.txt  mainTrials.xlsx  (+3 more)
buildScripts/: updateBuilderDemos.py
building/: apple_sign.py  buildAppMacOS.sh  buildCompleteInstaller.nsi  buildRelease.py  buildWinDistributions.ps1  buildWinDistributions.sh  buildingOnAMac.txt  codesign_and_chk.bat  compile_po.py  construct.yaml  createGitShaFile.py  createInitFile.py  dummy-1920x1080.conf.txt  entitlements.plist  fileassoc.nsh  plat_custom_installs.py  searchCopyrightYear.py  strExplode.nsh  updateBuilderDemos.py  writeVersionFiles.py
ci/: deb-install-build-depends  deb-install-build-depends-pip  report-coverage  run-tests
conda/: environment-2.7.yml  environment-3.6.yml  environment-3.7.yml  psychopy-env.yml
debian/: README.Debian  README.Debian-source  blends  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  gbp.conf  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  psychopy  psychopy-default.ex  psychopy-openbci.install  psychopy-openbci.links  psychopy.desktop  psychopy.doc-base.EX  psychopy.install  psychopy.links  psychopy.lintian-overrides  psychopy.sh  python-psychopy.links  rules  watch  watch.ex
docs/: Makefile  buildEpydoc.config  gource.cfg  gourceMake.sh  make.bat  makeall.sh  updateAlerts_rst.py  updateChangelog.py  updateChangelogMD.py  update_authors.py
exp_demos/: 1f3f_adapt.py  motionNullingGamma.py
iohub_docs/: Makefile  conf.py  index.rst  searchindex.js  template.py
monitors/: MonitorCenter.py  __init__.py  calibData.py  calibTools.py
packaging/: createInitFile.py  updateBuilderDemos.py
psychojs/: README.md  server.php
psychopy/: CHANGELOG.txt  LICENSE.txt  LICENSES.txt  PsychoPy_vsCode.code-workspace  README.txt  TODO.txt  VERSION  __init__.py  _parallel.py  _plugins.py  _quest.py  _shaders.py  _shadersPygame.py  _shadersPyglet.py  _version.py  authors.py  bits.py  calib.py  clock.py  colors.py  compatibility.py  configobj.py  constants.py  core.py  data.py  data_import.py  debugging.py  errors.py  event.py  exceptions.py  files2.txt  filters.py  gamma.py  gui.py  hardware.py  info.py  layout.py  legacy.py  liaison.py  locale_setup.py  (+31 more)
sandbox/: PygletGamma.py  _logging.py  bitsDemo.py  bitsDemo2.py  cedrusRB730.py  cedrusRB730_timing.py  colors.xlsx  demo_DKL_colours.py  demo_noise.py  demo_spiral.py  drawingOrder.py  elementsAsMask.py  junk.py  makeDotsIcon.py  masks.py  masks2.py  monitorInfo.py  monitorLevels.py  mouseGetPos.py  openGLTestbed.py  openGLTestbed2.py  openGLTestbed3.py  openGL_FBO.py  openGL_FBO_withTexture.py  openGL_FBO_withTextureShader.py  openZipFiles.py  opengl_info.py  photom.py  pinknoise.mat  profile_noise.bat  profile_noise.py  profile_noise_analysis.py  psychopyJoystick.py  pygameFonts.py  pygameJoystick.py  pygletFonts.py  pygletJoystick.py  pygletSoundTest.py  pyoTest.py  quicktime.py  (+49 more)
tests/: ExperimentObjects.py  ExperimentObjectsTest.py  LMS.py  _logging.py  demo_noise.py  demo_spiral.py  drawingOrder.py  edpydoc_docparse.py  openGLTestbed.py  openGLTestbed3.py  openGL_FBO.py  openGL_FBO_withTextureShader.py  opengl_info.py  profNoise.prof  profile_noise.py  pygameFonts.py  pygletSoundTest.py  rotateDotSphere.py  rotateDotSphere2.py  rotateDotSphere3.py  soundLatency.py  test byteMS_LS.py  test.dlm  testBitsFast.py  testBitsSlow.py  testBootStrap.py  testLogging.py  testMovieDraw.py  testMovieDraw2.py  testPR650.py  testPygameFonts.py  testShuffle.py  testTrialHandler.py  test_colorspaces.py  test_depth.py  test_depth1.py  test_getFrame.py  test_keyboard_timing.py  test_monitor_spectrum.py  test_pygame_c-types.py  (+3 more)
travis/: 00_set_up_packaging_system.sh  10_install_system_dependencies.sh  20_install_miniconda_python.sh  20_install_system_python.sh  environment-2.7.yml  environment-3.6.yml  environment-3.7.yml  environment-3.8.yml  gen_environment.sh  travis_retry.bash
windlls/: neededDlls.txt
(+3036 files in other folders)
