[tool.pdm]

[project]
name = "psychopy"
version = "2023.2.0rc1"
requires-python = ">=3.8, <3.11"
description = "PsychoPy provides easy, precise, flexible experiments in behavioural sciences"
readme ={file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Open Science Tools Ltd", email = "support@opensciencetools.org"},
]
maintainers = [
    {name = "Open Science Tools Ltd", email = "support@opensciencetools.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", ]
    
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyglet == 1.4.11; platform_system == \"Windows\"",
    "pyglet == 1.5.27; platform_system != \"Windows\"",
    "pillow>=9.4.0",
    "pyqt6",
    "pandas>=1.5.3",
    "questplus>=2023.1",
    # for core stimuli
    "soundfile",
    "imageio",
    "imageio-ffmpeg",
    "psychtoolbox",
    # for iohub
    "pywinhook; platform_system == \"Windows\"",
    "gevent",
    "psutil",
    "tables",
    "pyzmq",
    "ujson",
    "msgpack-numpy",
    # for text formatting
    "freetype-py",
    "python-bidi",
    "arabic-reshaper",
    "javascripthon",
    "websocket_client",  # new in 2023.2 for session.py
    # for the app
    "wxPython >= 4.1.1",
    "markdown-it-py",
    "requests",
    "future",  # to support legacy versions in useVersion
    # pavlovia connections
    "python-gitlab",
    "gitpython",
    "cryptography",  # for sshkeys
    # psychoJS conversions
    "astunparse",
    "esprima",
    "jedi >= 0.16",
    # hardware
    "pyserial",
    "pyparallel; platform_system != \"Darwin\"",
    # movie backends
    "ffpyplayer",
    "opencv-python",
    # platform specific
    "python-vlc == 3.0.11115; platform_system == \"Windows\"",
    "python-vlc >= 3.0.12118; platform_system != \"Windows\"",
    "pypiwin32; platform_system == \"Windows\"",
    "pyobjc-core; platform_system == \"Darwin\"",
    "pyobjc-framework-Quartz < 8.0; platform_system == \"Darwin\"",
    "pyobjc; platform_system == \"Darwin\"",
    "python-xlib; platform_system == \"Linux\"",
    "pyyaml",
    "pypi-search>=1.2.1",
    "openpyxl",
    "setuptools<=66.1.1",
]

[project.optional-dependencies]  # This is optional dependencies
egi = ["egi-pynetstation"]
legacy = ["moviepy", "pygame"]
tests = [
    "pytest",
    "pytest-codecov",
    "pytest-cov",
    "pytest-asyncio",
    "flake8",
    "xmlschema",
]

[project.urls]
Homepage = "https://www.psychopy.org/"
Download = "https://github.com/psychopy/psychopy/releases/"

[project.gui-scripts]
psychopy = "psychopy.app.psychopyApp:main"

[build-system]
requires = [
    "pdm-backend",
    "distro; platform_system == \"Linux\"",
    "tomlkit",
    ]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = []
excludes = ["building/"]
#source-includes = ["tests/"]

[[tool.pdm.source]]
url = "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04/"
name = "wxpython_wheels"
type = "find_links"

[tool.distutils.bdist_wheel]
universal = 1

[tool.psychopy]
src = ["psychopy"]
