[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
license = GNU GPLv3 (or more recent equivalent)
author = Jonathan Peirce
author_email = jon.peirce@gmail.com
maintainer_email = jon.peirce@gmail.com
url = https://www.psychopy.org/
download_url = https://github.com/psychopy/psychopy/releases/
description = Psychology experiment software in Python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
setup_requires = 
    distro; platform_system == "Linux"
install_requires =
    packaging
    requests[security]
    numpy
    scipy
    matplotlib
    pandas
    pillow
    glfw
    pyopengl
    soundfile
    sounddevice
    python-bidi
    arabic_reshaper
    future
    json_tricks
    pyosf
    xlrd
    openpyxl
    pyserial
    pyyaml
    gevent
    msgpack
    msgpack-numpy
    psutil
    tables
    pyzmq
    ujson
    moviepy
    opencv-python
    python-gitlab
    gitpython
    astunparse
    esprima
    freetype-py
    python-vlc
    jedi >= 0.16
    psychtoolbox == 3.0.16; platform_system == "Windows"
    # Platform-specific dependencies.
    javascripthon; python_version >= "3.5"
    pyglet >= 1.5; platform_system == "Darwin"
    pyglet < 1.5; platform_system != "Darwin"
    pathlib; python_version < "3.4"
    questplus >= 2019.3; python_version >= "3.6"
    imageio < 2.5; python_version < "3"
    imageio >= 2.5; python_version >= "3"
    imageio-ffmpeg; python_version >= "3"
    pyparallel; platform_system == "Linux"
    pyWinhook; platform_system == "Windows"
    pyqmix >= 2018.12.13; platform_system == "Windows"
    pyqt5; python_version >= "3"
    wxPython != 4.0.2, != 4.0.3; platform_system != "Linux"
    pypiwin32; platform_system == "Windows"
    pyobjc-core; platform_system == "Darwin"
    pyobjc-framework-Quartz; platform_system == "Darwin"
    pyobjc; platform_system == "Darwin"
    python-xlib; platform_system == "Linux"
    distro; platform_system == "Linux"
    websocket_client
    # Hardware specific dependencies
    tobii-research; python_version <= "3.6"

[options.entry_points]
gui_scripts =
    psychopy = psychopy.app.psychopyApp:main

[versioneer]
VCS = git
style = pep440
versionfile_source = psychopy/_version.py
versionfile_build =
tag_prefix = ''

[tool:pytest]
markers =
    needs_sound: requires sound hw, thus should not be excercised e.g. on travis-ci
    needs_pygame: requires pygame

