[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
license = GNU GPLv3 (or more recent equivalent)
author = Open Science Tools Ltd
author_email = support@opensciencetools.org
maintainer_email = support@opensciencetools.org
url = https://www.psychopy.org/
download_url = https://github.com/psychopy/psychopy/releases/
description = Psychology experiment software in Python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.6
setup_requires =
    distro; platform_system == "Linux"
install_requires =
    requests[security]
    cryptography
    numpy
    scipy
    matplotlib
    pandas
    pillow
    glfw
    pygame
    pyo
    soundfile
    sounddevice
    python-bidi
    arabic_reshaper
    json_tricks
    xlrd
    openpyxl
    pyserial
    pyyaml
    gevent
    msgpack
    msgpack-numpy
    psutil
    tables
    pyzmq
    ujson
    moviepy
    opencv-python
    python-gitlab
    gitpython
    astunparse
    esprima
    freetype-py
    jedi >= 0.16
    psychtoolbox
    pocketsphinx
    SpeechRecognition
    # Google API dependencies
    google-api-core
    google-auth
    google-cloud
    google-cloud-speech
    googleapis-common-protos
    # Platform-specific dependencies.
    python-vlc == 3.0.11115; platform_system == "Windows"
    python-vlc >= 3.0.12118; platform_system != "Windows"
    javascripthon
    pyglet >= 1.5; platform_system == "Darwin"
    pyglet < 1.5; platform_system != "Darwin"
    questplus >= 2019.3; python_version >= "3.6"
    imageio >= 2.5
    imageio-ffmpeg
    pyparallel; platform_system == "Linux"
    pyWinhook; platform_system == "Windows"
    pyqmix >= 2018.12.13; platform_system == "Windows"
    pyqt5
    wxPython != 4.0.2, != 4.0.3; platform_system != "Linux"
    pypiwin32; platform_system == "Windows"
    pyobjc-core < 8.0; platform_system == "Darwin"
    pyobjc-framework-Quartz < 8.0; platform_system == "Darwin"
    pyobjc < 8.0; platform_system == "Darwin"
    python-xlib; platform_system == "Linux"
    distro; platform_system == "Linux"
    websocket_client
    # Hardware specific dependencies
    tobii-research; python_version <= "3.8"
    egi-pynetstation
    markdown-it-py
    ffpyplayer


[options.entry_points]
gui_scripts =
    psychopy = psychopy.app.psychopyApp:main

[versioneer]
VCS = git
style = pep440
versionfile_source = psychopy/_version.py
versionfile_build =
tag_prefix = ''

[codespell]
skip = ./.git,static,_static
ignore-words-list = ans,extraversion,numer,ontext,ser,signall,statics,sur,tesselate,tesselated,tesselation,wit
